Add more details what make differ @Value vs java.lang.record
Thanks to:
Krzysztof Ślusarski
Alexey Shipilëv